Fix info bar to ensure that em element retains whitespace
Previously due to flexbox the em element emphasising “first” or “last” within the info bar was losing its whitespace causing it to render as “Please select thefirstday”

Fixed so that whitespace is retained. Now renders as “Please select the first
 day.

--- a/client/components/date-range/style.scss
+++ b/client/components/date-range/style.scss
@@ -148,6 +148,10 @@
 	align-items: center;
 	justify-content: center;
 	padding: 0.5em 0;
+
+	// ensures `em` element retains whitespace
+	// https://stackoverflow.com/questions/39325039/css-flex-box-last-space-removed
+	white-space: pre-wrap; 
 	
 	&,
 	.button {
@@ -156,9 +160,10 @@
 
 	.button {
 		color: var(--color-link);
+		
 		&:hover,
 		&:focus {
-			color: var(--color-link-300);
+			color: var(--color-accent);
 		}
 	}
 
